--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script>
 
-        var deps = ['scripts/test-dep.js', 'scripts/iiifgallery.js'];
+        var deps = ['scripts/test-dep.js', 'scripts/iiifgallery.proxy.js'];
 
         document.addEventListener("DOMContentLoaded", function(event) {
             requirejs(deps, function() {                
