--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>requirejs-stencil-test</title>
-    <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
-	<script src="https://unpkg.com/manifesto.js/dist/client/manifesto.bundle.js"></script>
 </head>
 <body>
 
     <script>
 
-        var deps = ['scripts/test-dep.js', 'scripts/iiifgallery.proxy.js'];
+        var deps = ['lib/three.min', 'lib/ami.min', 'scripts/test-dep.js', 'scripts/amiviewer.proxy.js'];
 
         document.addEventListener("DOMContentLoaded", function(event) {
-            requirejs(deps, function() {                
-                var gallery = document.createElement('iiif-gallery');
-                gallery.setAttribute('manifest', 'https://nomad-project.co.uk/objects/collection/index.json');
-                document.body.appendChild(gallery);
+            requirejs(deps, function() {  
+                console.log(AMI);              
+                // var amiviewer = document.createElement('ami-viewer');
+                // amiviewer.setAttribute('series', '36444280,36444294,36444308,36444322,36444336');
+                // document.body.appendChild(amiviewer);
             });
         });
         
